# Tauri-POC

./: .gitignore
electron/: index.html  main.js  package-lock.json  package.json
electron/output/: cert.pem  key.pem  signing.pfx
tauri/: generate-icons.mjs  index.html  package-lock.json  package.json
tauri/output/: cert.pem  flafka-poc-signed.msi  flafka-poc-unsigned.msi  key.pem  signing.pfx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
