[package]
name = "flafka-poc"
version = "0.1.0"
description = "Flafka POC"
authors = ["you"]
edition = "2021"

[lib]
name = "flafka_poc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
